src/client/stylesheets/style.less
/*
 * Copyright (C) 2014-2015  Ben Ockmore
 *               2015       Leo Verto
 *               2016       Sean Burke
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License along
 * with this program; if not, write to the Free Software Foundation, Inc.,
 * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
 */

@import "lobes/less/theme.less";
@import "font-awesome/fontawesome.less";
@import "font-awesome/solid.less";
@import "react-select/select.less";


/*
With Webpack and less-loader,
we should be able to import directly from node_modules directory with '~'.
The production configuration for webpack needs to be finalized before using this.
*/
/* @import "~@fortawesome/fontawesome-free/less/fontawesome.less";
/* @import "~@fortawesome/fontawesome-free/less/solid.less";
@import "~react-select/less/select.less";
@import "~react-virtualized/styles.css";
@import "~react-virtualized-select/styles.css";
 */

/* Modifications to Lobes */
/* ====================== */
@brand-secondary: @bookbrainz;
@disabled-bg: lighten(desaturate(@bookbrainz,10%),42%);
@disabled-color: lighten(@disabled-bg,15%);

.navbar.BookBrainz {
	background: rgba(255, 255, 255, 1);
	margin-bottom: 0px;
	.nav.navbar-nav > .disabled > a {
		color: @disabled-color;
		background: @disabled-bg;
	}
}

.navbar-collapse {
	border: none !important;
}

.BookBrainz .navbar-toggle {
	background-color: @bookbrainz;
	&:focus {
		background-color: @bookbrainz;
	}
}

/* Overwrite button primary colour to retain default bootstrap meaning */
@btn-primary-bg:                 darken(#428bca, 6.5%);
@btn-primary-border:             darken(#428bca, 6.5%);

body {
	margin-top: 64px;
    margin-bottom: 64px;
}

@media (max-width: 600px) {
    body {
        margin-bottom: 128px;
    }
}


/* Site-wide styling */
/* ================= */
.whole-page-form {
	margin-top: 3em;
}
.navbar-form .input-group-btn > .btn {
	padding: 6.5px 12px !important;
}
.loading-background {
	position: fixed;
	display: inline-block;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	z-index: 10;
	background-color: rgba(0,0,0,0.6);
}
.loading-spinner {
	position: absolute;
	left: 50%;
	top: 50%;
	margin-left: -0.5em;
	margin-top: -0.5em;
}
.generate-margins(@n, @i: 0) when (@i =< @n) {
	.margin-top-@{i} {
		margin-top: unit(@i, em) !important;
	}
	.margin-bottom-@{i} {
		margin-bottom: unit(@i, em) !important;
	}
	.margin-left-@{i} {
		margin-left: unit(@i, em) !important;
	}
	.margin-right-@{i} {
		margin-right: unit(@i, em) !important;
	}
	.margin-sides-@{i} {
		margin-left: unit(@i, em) !important;
		margin-right: unit(@i, em) !important;
	}

	.padding-top-@{i} {
		padding-top: unit(@i, em) !important;
	}
	.padding-bottom-@{i} {
		padding-bottom: unit(@i, em) !important;
	}
	.padding-left-@{i} {
		padding-left: unit(@i, em) !important;
	}
	.padding-right-@{i} {
		padding-right: unit(@i, em) !important;
	}
	.padding-sides-@{i} {
		padding-left: unit(@i, em) !important;
		padding-right: unit(@i, em) !important;
	}
	.generate-margins(@n, (@i + 1));
}
.generate-margins(6);
.margin-right-0-5 {margin-right: unit(0.5, em) !important};
.margin-left-0-5 {margin-left: unit(0.5, em) !important};
.margin-right-0-3 {margin-right: unit(0.3, em) !important};
.margin-left-0-3 {margin-left: unit(0.3, em) !important};

.generate-margins-d(@n, @i: 0) when (@i =< @n) {
	.margin-top-d@{i} {
		margin-top: unit((@i/10), em) !important;
	}
	.margin-bottom-d@{i} {
		margin-bottom: unit((@i/10), em) !important;
	}
	.margin-left-d@{i} {
		margin-left: unit((@i/10), em) !important;
	}
	.margin-right-d@{i} {
		margin-right: unit((@i/10), em) !important;
	}
	.margin-sides-d@{i} {
		margin-left: unit((@i/10), em) !important;
		margin-right: unit((@i/10), em) !important;
	}

	.padding-top-d@{i} {
		padding-top: unit((@i/10), em) !important;
	}
	.padding-bottom-d@{i} {
		padding-bottom: unit((@i/10), em) !important;
	}
	.padding-left-d@{i} {
		padding-left: unit((@i/10), em) !important;
	}
	.padding-right-d@{i} {
		padding-right: unit((@i/10), em) !important;
	}
	.padding-sides-d@{i} {
		padding-left: unit((@i/10), em) !important;
		padding-right: unit((@i/10), em) !important;
	}
	.generate-margins-d(@n, (@i + 1));
}
.generate-margins-d(60);

.no-sides-border {
	border-left: 0px;
	border-right: 0px;
}

.picture-fallback-icon(@size) {
	font-size: @size;
	margin: 0.2em 0;
	color: #d0d0d0;
}
.picture-fallback-icon-small {
	.picture-fallback-icon(300%);
}
.picture-fallback-icon-large {
	.picture-fallback-icon(800%);
}

/**
 * Styling for FontAwesome icons, to fix random-sized
 * icons appear while the page is loading (FOUC).
 */
.svg-inline--fa{
	height: 1em;
}

/* Sticky footer styling */
html {
	position: relative;
	min-height: 100%;
}
.footer {
	position: absolute;
	width: 100%;
	background-color: #f5f5f5;
    bottom: 0;
}
.contact-text {
	color: rgb(180, 180, 180);
	vertical-align: middle;
}
/* index.jade */
/* ========== */
#background-image {
	background:url(/images/Bookshelf.jpg);
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	width:100%;
	height:550px;
}

#background-overlay {
	background:rgba(0, 0, 0, 0.8);
	width:100%;
	height:100%;
	padding-top:4em;
}

.deleted {
	text-decoration-line: line-through;
	text-decoration-color: @brand-danger;
}

/* getStarted.jade */
/* =============== */
.get-started-icon {
	margin-top: 20px;
}

/* entity/view/*.jade */
/* ================== */
.entity-action {
	margin-left: 0.1em;
	margin-right: 0.1em;
}

/* Removes padding from fixed-width "About", "Contribute" and "Develop" buttons
   on the front page to prevent text misalignment. */
#background-overlay [class^="col-"] > .btn {
	padding-left: 0 !important;
	padding-right: 0 !important;
}


/* react-select styling */
.Select-control {
	height: @input-height-base;
	border-radius: @input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
	.transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
	.form-control-focus();

}

.Select-placeholder {
	color: @input-color-placeholder;
}

/* react-datepicker styling */
.form-group {
	.react-datepicker-wrapper, .react-datepicker__input-container {
		width: 100%;
	}
	.react-datepicker {
		font-family: inherit;
		font-size: inherit;
		.react-datepicker__day-name, .react-datepicker__day, .react-datepicker__time-name {
			width: 2.3rem;
			line-height: 2.3rem;
			margin: 0.2rem;
		}
		.react-datepicker__current-month, .react-datepicker-time__header {
			font-size: inherit;
		}
		.react-datepicker__header__dropdown.react-datepicker__header__dropdown--select {
			font-size: 0.9rem;
		}
	}
}

/* entities/*.js */
/* ============= */

.entity-display-background {
	background-color: #f1edeb;
}

.entity-display-image-box {
	padding-right: 0px;
}

.entity-display-icon {
	position: relative;
	min-height: 5em;
	line-height: initial;
	margin-top: 5em;
	margin-bottom: 5em;
	>:last-child:not(:only-child) {
		color: @brand-danger;
	}
}

.VirtualizedSelectOption {
	cursor: pointer;
}

.Select-menu-outer {
	z-index: 5;
}
.progress {
	height: 10px;
}


/* Text wrapping in list-group-items (for long revision notes, for example) */
/* ============= */
.list-group-item {
	word-wrap: break-word;
}

/* Search Page */

hr.thin {
	margin-top: 10px;
    margin-bottom: 10px;
}
hr.wide {
	margin-top: 40px;
    margin-bottom: 40px;
}
#pageWithPagination .pager .dropdown-menu {
	li {
	  display: initial;
	  > a,
	  > span {
		display: block;
		padding: 5px 14px;
		background-color: @dropdown-bg;
		border: none;
		border-radius: 0;
	  }

	  > a:hover,
	  > a:focus {
		text-decoration: none;
		background-color:@dropdown-link-hover-bg;
	  }
	}
}

@media only screen and (max-width: 600px) {
	#searchpage-button-group > * {
		width: 100%;
	}
}

.BookBrainz > .container-fluid > .navbar-header{
	margin-left: 0px;
	margin-right: 0px;
	>.navbar-toggle{
		margin-right: 0px;
	}

}
.revision-note {
	&:not(:last-child) {
		border-bottom: 1px solid @disabled-color;
		margin-bottom: 0.3em;
		padding-bottom: 0.3em;
	}
	.note-content {
		quotes: "\201C" "\201D";
		&::before {
			content: open-quote;
		}
		&::after {
			content: close-quote;
		}
	}
	.note-author {
		&:extend(.small);
		font-style: italic;
		white-space: nowrap;
		margin-left: 0.2em;
	}
}

